--- a/src/templates/welcome_client_template.html
+++ b/src/templates/welcome_client_template.html
@@ -41,7 +41,8 @@
 <body>
     <div class="container">
         <h1>🎉 Bienvenu·e {{name}}!</h1>
-        <p>Merci d'avoir visité notre magazin. Si vous avez des questions ou des problèmes concernant votre achat, n'hésitez pas à nous contacter.</p>
+        <p>{{custom_message}}</p>
+        <p>Si vous avez des questions ou des problèmes concernant votre achat, n'hésitez pas à nous contacter.</p>
         <p>Cordialement,</p>
         <p>Magazin du Coin</p>
         <p class="user-id">Votre ID Utilisateur: {{user_id}}</p>
